# box

./: MANIFEST.in  README.md  setup.cfg
box/: box.py  box_info.py  box_iterator.py  box_parser.py  box_type.py  branch_node.py  break_node.py  continue_node.py  for_loop_node.py  function_call_node.py  function_declaration_node.py  generator.py  main.py  operator_node.py  parser.py  port.py  return_node.py  set_node.py  test.box  token.py  transpiler.py  while_loop_node.py
box/nodes/: constant_node.py  function_call_node.py  inputs_node.py  outputs_node.py  string_literal_node.py
box/tests/: factorial.box  hello_world.box  is_even.box  is_even_with_control_flow.box  print_n_times.box
samples/: add.box  break.box  factorial.box  hello_world.box  is_even.box  list_append.box  negate_boolean.box  print_list.box  progress_loop.box  sum_of_numbers_1_to_n.box
src/box/: box.py  box_iterator.py  branch_node.py  break_node.py  continue_node.py  for_each_node.py  for_loop_node.py  function_call_node.py  function_declaration_node.py  generator.py  importer.py  main.py  operator_node.py  parser.py  return_node.py  set_node.py  token.py  while_loop_node.py
