[metadata]
# replace with your username:
name = box
version = 1.0.0
author = Pranav Srinivas Kumar
author_email = pranav.srinivas.kumar@gmail.com
description = Box is a text-based visual programming language inspired by Unreal Engine blueprint function graphs.
long_description = file: README_PyPI.md
long_description_content_type = text/markdown
url = https://github.com/p-ranav/box
project_urls =
    Bug Tracker = https://github.com/p-ranav/box/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.5

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    box = box.main:main